# smc_sco-ltem1wlm_nrf9160

./: CMakeLists.txt  Kconfig  README.md  build.sh  flash.sh  prj.conf.base
Node-RED/: flows.json
PCB/Gerber/: SCO-LTEM1WLM-B-macro.APR_LIB  SCO-LTEM1WLM-B.EXTREP  SCO-LTEM1WLM-B.GBL  SCO-LTEM1WLM-B.GBO  SCO-LTEM1WLM-B.GBP  SCO-LTEM1WLM-B.GBS  SCO-LTEM1WLM-B.GM1  SCO-LTEM1WLM-B.GTL  SCO-LTEM1WLM-B.GTO  SCO-LTEM1WLM-B.GTP  SCO-LTEM1WLM-B.GTS  SCO-LTEM1WLM-B.REP  SCO-LTEM1WLM-B.RUL  SCO-LTEM1WLM-B.apr
PCB/NC Drill/: SCO-LTEM1WLM-B.DRR  SCO-LTEM1WLM-B.LDP  SCO-LTEM1WLM-B.TXT
PCB/Pick Place/: Pick Place for SCO-LTEM1WLM-B.csv
boards/arm/sco-ltem1wlm_nrf9160/: Kconfig.board  Kconfig.defconfig  board.cmake  scm-ltem1nrf_nrf9160.yaml  scm-ltem1nrf_nrf9160_common-pinctrl copy.dtsi  scm-ltem1nrf_nrf9160_common-pinctrl.dtsi  scm-ltem1nrf_nrf9160_common.dts  scm-ltem1nrf_nrf9160_defconfig  scm-ltem1nrf_nrf9160_ns.yaml  scm-ltem1nrf_nrf9160_ns_defconfig
firmware/: sco-ltem1wlm_nrf9160.hex  smc_sco-ltem1wlm_nrf9160_20230619.hex
src/: main.c
